--- a/Frontend/voucher-ui/src/app/index/index.component.html
+++ b/Frontend/voucher-ui/src/app/index/index.component.html
@@ -1,1 +1,6 @@
-<p>index works!</p>
+<mat-toolbar color="primary">
+  <mat-toolbar-row>
+    <span>Vouchers</span>
+    <span class="toolbar-spacer"></span>
+  </mat-toolbar-row>
+</mat-toolbar>
