--- a/Frontend/voucher-ui/src/app/components/vouchers/vouchers.component.css
+++ b/Frontend/voucher-ui/src/app/components/vouchers/vouchers.component.css
@@ -1,14 +1,12 @@
 ul {
   /*counter-reset: index;*/
   padding: 0;
-  max-width: 100%;
 }
 
 /* List element */
 li {
   /*counter-increment: index;*/
   display: flex;
-  align-items: center;
   padding: 12px 0;
   box-sizing: border-box;
   color: #f9cd0b;
@@ -29,6 +27,7 @@ li::after {
   background-attachment: fixed;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+  color: #f9cd0b;
 }
 
 
