--- a/Frontend/voucher-ui/src/app/components/vouchers/vouchers.component.html
+++ b/Frontend/voucher-ui/src/app/components/vouchers/vouchers.component.html
@@ -14,11 +14,15 @@
 </mat-radio-group>
   </div>
 <form [formGroup]="voucherForm">
-  <p>
-    <label for="voucherQuantity">Voucher Quantity </label>
-    <input type="number" id="voucherQuantity" matInput #voucherQuantity class="formControl" name="voucherQuantity" required
-           formControlName="voucherQuantity" placeholder="Enter voucher quantity e.g. 50" (keyup)="onInputChange()" autocomplete="off">
-  </p>
+  <mat-form-field class="form-label">
+    <mat-label>Voucher Quantity</mat-label>
+        <input type="number" id="voucherQuantity" matInput #voucherQuantity class="formControl input-form" name="voucherQuantity" required
+               formControlName="voucherQuantity" placeholder="Enter voucher quantity e.g. 50" (keyup)="onInputChange()" autocomplete="off">
+  </mat-form-field>
+<!--  <p>-->
+<!--    <label for="voucherQuantity">Voucher Quantity </label>-->
+
+<!--  </p>-->
 </form>
 
   <mat-list>
