--- a/Frontend/voucher-ui/src/theme.scss
+++ b/Frontend/voucher-ui/src/theme.scss
@@ -3,8 +3,10 @@
 @include mat.core();
 
 // Define a light theme
-$light-primary: mat.define-palette(mat.$indigo-palette);
+// $dark-primary: mat.define-palette(mat.$blue-grey-palette, A100, A200, A400);
+$light-primary: mat.define-palette(mat.$blue-grey-palette, A100, A200, A400);
 $light-accent: mat.define-palette(mat.$blue-grey-palette);// blue-grey-palette
+// $my-accent: mat.define-palette(mat.$pink-palette, A100, A200, A400);
 $light-theme: mat.define-light-theme((
   color: (
     primary: $light-primary,
@@ -12,8 +14,11 @@ $light-theme: mat.define-light-theme((
   )
 ));
 
+//#29B6F6 400
+//#03A9F4 500
+
 // Define a dark theme
-$dark-primary: mat.define-palette(mat.$pink-palette);
+$dark-primary: mat.define-palette(mat.$blue-grey-palette, A100, A200, A400);
 $dark-accent: mat.define-palette(mat.$blue-grey-palette);
 $dark-theme: mat.define-dark-theme((
   color: (
@@ -23,8 +28,8 @@ $dark-theme: mat.define-dark-theme((
 ));
 
 // Apply the dark theme by default
-@include mat.core-theme($dark-theme);
-@include mat.button-theme($dark-theme);
+@include mat.core-theme($light-theme);
+@include mat.button-theme($light-theme);
 
 // Apply the light theme only when the `.my-light-theme` CSS class is applied
 // to an ancestor element of the components (such as `body`).
